--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,13 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: User Guide
+description: Documentation for xxx
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: ""
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+# aux_links:
+#   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+color_scheme: dark
+
+# For copy button on code
+enable_copy_code_button: true
